--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "name": "json_the_cat",
   "description": "cats",
   "version": "1.0.0",
-  "main": "breedFetcher.js",
-  "devDependencies": {},
+  "main": "./index",
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "mocha": "^9.2.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./index",
+    "test": "mocha test/"
   },
   "repository": {
     "type": "git",
